[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "tues"
version = "3.1.0"
description = "Easy remote command execution"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Michael van Bracht", email = "michael@wontfix.org"},
    {name = "Marc Schmitzer", email = "marc@solute.de"},
    {name = "Roland Sommer", email = "rol@ndsommer.de"},
]
keywords = ["ssh", "remote", "shell", "sudo"]
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click",
    "asyncssh",
    "async-timeout",
    "requests>=2.4",
    "setuptools",
    "cryptography",
]

[project.urls]
homepage = "https://github.com/wontfix-org/tues/"
repository = "https://github.com/wontfix-org/tues/"

[project.optional-dependencies]
test = ["pytest"]
dev = ["build", "twine", "tox"]
icinga2 = ["icinga2api"]

[project.scripts]
tues = "tues.cli.tues:main"
tues-provider-fm = "tues.cli.tues_provider_fm:main"
tues-provider-cl = "tues.cli.tues_provider_cl:main"
tues-provider-file = "tues.cli.tues_provider_file:main"
tues-provider-icinga2 = "tues.cli.tues_provider_icinga2:main[icinga2]"

[tool.setuptools.packages.find]
where = ["src"]
